<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonGrantSMSSendPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sms_send_denied" />

        <Button
            android:id="@+id/buttonGrantSMSReceivePermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sms_receive_denied" />

        <Button
            android:id="@+id/buttonGrantInternetPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_internet_denied" />

        <EditText
            android:id="@+id/editTextServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/server_hint"
            android:inputType="textWebEditText"
            android:singleLine="true"
            android:text="@string/default_server" />

        <Button
            android:id="@+id/buttonConnectToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_connect" />

        <ScrollView
            android:id="@+id/scrollViewLog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web|phone"
                    android:textColor="@android:color/white"
                    android:textIsSelectable="true"
                    android:textSize="12sp"
                    android:typeface="monospace" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>